--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -99,6 +99,16 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">公告类型</label>
+        <div class="layui-input-block">
+          <select name="iType">
+            <option value="1" selected>正常公告</option>
+            <option value="2">更新公告</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
         </div>
