--- a/front/pages/server/server-add.html
+++ b/front/pages/server/server-add.html
@@ -168,6 +168,42 @@
         ]]
       });
 
+      if (parentData && parentData.copy == true) {
+        let req = {
+          app: parentData.app,
+          server: parentData.server,
+          division: parentData.division,
+          node: parentData.node
+        };
+        okUtils.ajax("/api/server/detail", "get", req, false).done(function (response) {
+          let data = response.data;
+          let services = [];
+          for (let v of data.services) {
+            let s = v
+            s['obj'] = data.app + '.' + data.server + '.' + v.service;
+            services.push(s);
+          }
+
+          curTable.reload({
+            data: services,
+          });
+          $('#app').val(data.app);
+          $('#server').val(data.server);
+          $('#division').val(data.division);
+          $('#node').val(data.node);
+          $('#auto_start').val(data.auto_start);
+          $('#profile_conf_template').val(data.profile_conf_template);
+          $('#mfw_server').val(data.mfw_server);
+          $('#start_script').val(data.start_script);
+          $('#monitor_script').val(data.monitor_script);
+          $('#stop_script').val(data.stop_script);
+          templateSelect.setValue([parentData.template_name]);
+          form.render();
+        }).fail(function (error) {
+          console.log(error);
+        });
+      }
+
       form.on('submit(add)', function (data) {
         let services = table.cache.tableId;
         for (s of services) {
