--- a/front/pages/game/online-time.html
+++ b/front/pages/game/online-time.html
@@ -33,9 +33,9 @@
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
-<script src="lib/dayjs@1.11.1/dayjs.min.js"></script>
-<script src="lib/dayjs@1.11.1/plugin/utc.js"></script>
-<script src="lib/dayjs@1.11.1/plugin/timezone.js"></script>
+<script src="/lib/dayjs@1.11.1/dayjs.min.js"></script>
+<script src="/lib/dayjs@1.11.1/plugin/utc.js"></script>
+<script src="/lib/dayjs@1.11.1/plugin/timezone.js"></script>
 
 <script>
   var zoneid;
