--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/editorMenu.css">
 </head>
 
-<script src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
+<script src="https://unpkg.com/wangeditor/dist/wangEditor.min.js"></script>
 <script src="/js/editorMenu.js"></script>
 
 <body>
