--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 
-<script src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
+<script src="https://unpkg.com/wangeditor/dist/wangEditor.min.js"></script>
 <script src="/js/editorMenu.js"></script>
 
 <body>
