--- a/front/pages/gm/push-add.html
+++ b/front/pages/gm/push-add.html
@@ -137,11 +137,9 @@
           }
         };
         let android = {
-          "display_type": "notification",
-          "body": {
-            "ticker": title,  //通知栏提示文字
+          "notification": {
             "title": title,   //通知标题
-            "text": content,  //通知文字描述
+            "body": content,  //通知文字描述
           }
         };
 
