--- a/front/pages/gm/channel.html
+++ b/front/pages/gm/channel.html
@@ -38,6 +38,7 @@
           { field: "sAddress", title: "exe更新地址" },
           { field: "sRes", title: "res更新地址" },
           { field: "sShopVer", title: "商店版本号" },
+          { field: "sFastFollow", title: "商店包下载资源" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
