--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -18,7 +18,8 @@
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-tab layui-tab-brief">
         <ul class="layui-tab-title">
-          <li class="layui-this">简体中文(默认)</li>
+          <li class="layui-this">日语</li>
+          <li>简体中文</li>
           <li>英语</li>
         </ul>
         <div class="layui-tab-content">
@@ -26,8 +27,23 @@
             <div class="layui-form-item">
               <label class="layui-form-label">标题</label>
               <div class="layui-input-block">
-                <input type="text" id="zh-CNTitle" placeholder="请输入标题" autocomplete="off" class="layui-input"
-                  lay-verify="required" lay-verType="tips">
+                <input type="text" id="jaTitle" placeholder="请输入标题" autocomplete="off" class="layui-input">
+              </div>
+            </div>
+
+            <div class="layui-form-item">
+              <label class="layui-form-label">内容</label>
+              <div class="layui-input-block">
+                <div id="ja"></div>
+                <textarea id="jaHtml" placeholder="请编辑内容" class="layui-textarea"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="layui-tab-item">
+            <div class="layui-form-item">
+              <label class="layui-form-label">标题</label>
+              <div class="layui-input-block">
+                <input type="text" id="zh-CNTitle" placeholder="请输入标题" autocomplete="off" class="layui-input">
               </div>
             </div>
 
@@ -82,19 +98,13 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">是否弹窗显示</label>
+        <label class="layui-form-label">默认语言</label>
         <div class="layui-input-block">
-          <select name="iPopWindow" lay-filter="type">
-            <option value="0">否</option>
-            <option value="1" selected>是</option>
+          <select name="sDefaultLang">
+            <option value="ja" selected>日语</option>
+            <option value="en">英语</option>
+            <option value="zh-CN">中文</option>
           </select>
-        </div>
-      </div>
-
-      <div class="layui-form-item" id="popWindowEndTime">
-        <label class="layui-form-label">弹窗显示时间</label>
-        <div class="layui-input-block">
-          <input type="text" name="sPopWindowEndTime" id="iPopWindowEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
@@ -111,6 +121,13 @@
   <script>
     zhCNeditor = getDefaultEditor('#zh-CN');
     ENeditor = getDefaultEditor('#en');
+    jaeditor = getDefaultEditor('#ja');
+
+    function getLangEditor(lang) {
+        if (lang == "en") return ENeditor;
+        else if (lang == "ja") return jaeditor;
+        else return zhCNeditor;
+    }
 
     layui.use(['form', 'laydate', 'okLayer', 'okUtils', 'element'], function () {
       let form = layui.form;
@@ -126,9 +143,12 @@
       laydate.render({
         elem: "#iEndTime", type: "datetime"
       });
-      laydate.render({
-        elem:"#iPopWindowEndTime", type:"datetime"
-      });
+
+      jaeditor.config.onchange = function (newHtml) {
+        let jsonData = jaeditor.txt.getJSON();
+        let ouputStr = ExecuteJsonData(jsonData);
+        $(jaeditor.toolbarSelector+"Html").val(ouputStr);
+      }
 
       zhCNeditor.config.onchange = function (newHtml) {
         let jsonData = zhCNeditor.txt.getJSON();
@@ -142,15 +162,6 @@
         $(ENeditor.toolbarSelector+"Html").val(ouputStr);
       }
 
-      form.on('select(type)', function(data){
-        if(data.value==0){
-          $('input[name=sPopWindowEndTime]').val("");
-          $('input[name=sPopWindowEndTime]').attr("lay-verify", "");
-        } else {
-          $('#popWindowEndTime').removeClass('layui-hide');
-        }
-      });
-
       //监听提交
       form.on('submit(add)', function (data) {
         if (data.field.sBeginTime >= data.field.sEndTime) {
@@ -158,30 +169,30 @@
           return false;
         }
 
-        if (data.field.iPopWindow == 1 && data.field.sBeginTime >= data.field.sPopWindowEndTime) {
-          okLayer.redCrossMsg('开始时间不能大于弹窗显示结束时间', function () {});
-          return false;
+        let mlang = {};
+        let langs = ["en", "zh-CN", "ja"];
+        for (let i=0; i < langs.length; ++i) {
+          let lang = langs[i];
+          let title = $('#'+lang+'Title').val();
+          let content = $('#'+lang+'Html').val();
+          let htmlContent = getLangEditor(lang).txt.html();
+          if (lang == data.field.sDefaultLang) {
+            data.field.sTitle = title;
+            data.field.sContent = content;
+            data.field.sHtmlContent = htmlContent;
+          } else {
+            mlang[lang] = {"sTitle": title, "sContent": content, "sHtmlContent": htmlContent};
+          }
         }
-
-        if (data.field.sPopWindowEndTime > data.field.sEndTime) {
-          okLayer.redCrossMsg('弹窗显示结束时间不能大于结束时间', function () {});
-          return false;
-        }
-
-        data.field.sTitle = $('#zh-CNTitle').val();
-        data.field.sContent = $('#zh-CNHtml').val();
-        data.field.sHtmlContent = zhCNeditor.txt.html();
 
         if (data.field.sTitle == "" || data.field.sContent == "" || data.field.sHtmlContent == "") {
           okLayer.redCrossMsg('默认语言的配置不能为空', function () {});
           return false;
         }
 
-        let lang = {};
-        lang["en"] = {"sTitle": $('#enTitle').val(), "sContent": $('#enHtml').val(), "sHtmlContent": ENeditor.txt.html()};
-        if (!checkLang(lang)) {
+        if (!checkLang(mlang)) {
           okLayer.confirm('除了默认语言还有语言未填,是否继续提交?', function(index) {
-            data.field.sLangContent = okUtils.jsonToString(lang);
+            data.field.sLangContent = okUtils.jsonToString(mlang);
             okUtils.ajax("/api/gm/bulletin/add", "post", data.field, true).done(function (response) {
               okLayer.greenTickMsg(response.data, function () {
                 parent.layer.close(parent.layer.getFrameIndex(window.name));
@@ -194,7 +205,7 @@
           return false;
         }
 
-        data.field.sLangContent = okUtils.jsonToString(lang);
+        data.field.sLangContent = okUtils.jsonToString(mlang);
         okUtils.ajax("/api/gm/bulletin/add", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
