--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -56,6 +56,13 @@
               return d.iPopWindow == 1 ? '是' : '否';
             }
           },
+          {
+            field: "iTopDisplay", title: "是否置顶显示", align: "center", templet: function (d) {
+              return d.iPopWindow == 1 ? '是' : '否';
+            }
+          },
+          { field: "iShowPriority", title: "展示优先级(1-10 >)", align: "center" },
+          { field: "sShowPicture", title: "展示图", align: "center" },
           { field: "sPopWindowEndTime", title: "结束时间", align: "center" },
           {
             field: "iFlag", title: "状态", align: "center", templet: function (d) {
