--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -98,6 +98,30 @@
         </div>
       </div>
 
+      <div class="layui-form-item" id="iTopDisplay">
+        <label class="layui-form-label">是否置顶显示</label>
+        <div class="layui-input-block">
+          <select name="iTopDisplay">
+            <option value="0">否</option>
+            <option value="1" selected>是</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item" id="iShowPriority">
+        <label class="layui-form-label">展示优先级</label>
+        <div class="layui-input-block">
+          <input type="text" name="iShowPriority" id="iShowPriority" autocomplete="off" class="layui-input" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item" id="sShowPicture">
+        <label class="layui-form-label">展示图</label>
+        <div class="layui-input-block">
+          <input type="text" name="sShowPicture" id="sShowPicture" autocomplete="off" class="layui-input" lay-verType="tips">
+        </div>
+      </div>
+
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
