--- a/front/pages/gm/global-config.html
+++ b/front/pages/gm/global-config.html
@@ -17,6 +17,7 @@
   <!--js逻辑-->
   <script src="../../lib/layui/layui.js"></script>
   <script>
+    var editConfig = {};
     layui.use(["element", "table", "okLayer", "okUtils"], function () {
       let table = layui.table;
       let okLayer = layui.okLayer;
@@ -50,6 +51,13 @@
             batchDel();
             break;
         }
+      });
+
+      table.on('rowDouble(tableFilter)', function(obj){
+        editConfig = obj.data;
+        okLayer.open("添加", "global-config-edit.html", "90%", "90%", null, function () {
+          curTable.reload();
+        });
       });
 
       function batchDel() {
