--- a/front/pages/gm/global-config-edit.html
+++ b/front/pages/gm/global-config-edit.html
@@ -15,14 +15,14 @@
       <div class="layui-form-item">
         <label class="layui-form-label">主键</label>
         <div class="layui-input-block">
-          <input type="text" required  disabled="true" name="sKey" class="layui-input">
+          <input type="text" required disabled="true" id="sKey" name="sKey" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">内容</label>
         <div class="layui-input-block">
-          <input type="text" required name="sValue" class="layui-input">
+          <input type="text" required id="sValue" name="sValue" class="layui-input">
         </div>
       </div>
 
