--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -102,8 +102,8 @@
         <label class="layui-form-label">是否置顶显示</label>
         <div class="layui-input-block">
           <select name="iTopDisplay">
-            <option value="0">否</option>
-            <option value="1" selected>是</option>
+            <option value="0" selected>否</option>
+            <option value="1">是</option>
           </select>
         </div>
       </div>
