--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -58,7 +58,7 @@
           },
           {
             field: "iTopDisplay", title: "是否置顶显示", align: "center", templet: function (d) {
-              return d.iPopWindow == 1 ? '是' : '否';
+              return d.iTopDisplay == 1 ? '是' : '否';
             }
           },
           { field: "iShowPriority", title: "展示优先级(1-10 >)", align: "center" },
