--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -82,12 +82,9 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">是否弹窗显示</label>
+        <label class="layui-form-label">弹窗显示次数</label>
         <div class="layui-input-block">
-          <select name="iPopWindow" lay-filter="type">
-            <option value="0">否</option>
-            <option value="1" selected>是</option>
-          </select>
+          <input type="text" name="iPopWindow" id="iPopWindow" autocomplete="off" class="layui-input" lay-verType="tips">
         </div>
       </div>
 
@@ -112,13 +109,6 @@
         <label class="layui-form-label">展示优先级</label>
         <div class="layui-input-block">
           <input type="text" name="iShowPriority" id="iShowPriority" autocomplete="off" class="layui-input" lay-verType="tips">
-        </div>
-      </div>
-
-      <div class="layui-form-item" id="sShowPicture">
-        <label class="layui-form-label">展示图</label>
-        <div class="layui-input-block">
-          <input type="text" name="sShowPicture" id="sShowPicture" autocomplete="off" class="layui-input" lay-verType="tips">
         </div>
       </div>
 
