--- a/front/pages/gm/global-config.html
+++ b/front/pages/gm/global-config.html
@@ -36,7 +36,8 @@
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
           { field: "sKey", title: "主键", align: "center" },
-          { field: "sValue", title: "内容" },
+          { field: "sValue", title: "内容", align: "center" },
+          { field: "sComment", title: "备注", align: "center" },
         ]]
       });
 
