--- a/front/pages/gm/global-config-add.html
+++ b/front/pages/gm/global-config-add.html
@@ -27,6 +27,13 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">备注</label>
+        <div class="layui-input-block">
+          <input type="text" required name="sComment" class="layui-input">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
         </div>
